# vcpkg-example-curl

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  vcpkg.json
ca-certificates/: notes.txt
src/: main.c
